projects/vb6parse/snapshots/tests/statements/objects/call/procedure_call_preserves_whitespace.snap
---
source: projects/vb6parse/tests/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MySub
        - kind: Whitespace
          text: "  "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: arg1
            - kind: Whitespace
              text: " "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: arg2
        - kind: Newline
          text: "\n"
