projects/vb6parse/snapshots/tests/statements/objects/call/procedure_call_vs_assignment.snap
---
source: projects/vb6parse/tests/statements/objects/call.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "5"
        - kind: Newline
          text: "\n"
